...

    var title: String {
        switch self {
        case .capture:
            "Capture"
        case .notes:
            "Notes"
        case .folders:
            "Folders"
        }
    }

    var iconName: String {
...
